Added simple mcstatus reponse
